--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -98,23 +98,25 @@ Last drop day</span><br>
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-4 (from start)</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture 4 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 15</td>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">4:
 Algorithm Analysis<br>
-5: Review: Stacks<br>
+      <br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 18</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-19</td>
+19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+4 (from slide 17)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
@@ -122,8 +124,8 @@ Algorithm Analysis<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 22</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
-      </td>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">5:
+Review: Stacks </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
