--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -85,9 +85,7 @@ Last drop day</span><br>
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-O5 (from slide 9)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture O5 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 15</td>
@@ -96,7 +94,11 @@ O5 (from slide 9)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 18</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-19</td>
+19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+O5 (from slide 28), P1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
