--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -22,8 +22,10 @@ HOMEWORK
 AND PROGRAMS <br>
 <br>
 &nbsp;&nbsp; Lab 1 - A Simple Linux Shell<br>
-&nbsp;&nbsp; Due TBD<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, seed file<br>
+&nbsp;&nbsp; Due October 17<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="../labs/lab 1 linux shell.pdf" target="_top">Description</a>
+	, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
 <br>
 &nbsp;&nbsp; Lab 2 -<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
