--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -95,14 +95,14 @@ Last drop day</span><br>
 18</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 19<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-O5 (from slide 28), P1</span><br>
-      </div>
+      <div style="text-align: center;">Lectures O5, P1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-21</td>
+21<br>
+      <div style="text-align: center;">Lecture P1 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 22</td>
     </tr>
@@ -110,7 +110,11 @@ O5 (from slide 28), P1</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 25</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-26</td>
+26<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P1 (from slide 51)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
@@ -154,7 +158,11 @@ withdrawal day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-17</td>
+17<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 18</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
@@ -166,7 +174,8 @@ withdrawal day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 23</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-24</td>
+24<br>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 25</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
@@ -194,7 +203,11 @@ withdrawal day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 8</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-9</td>
+9<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 10<br>
       <div style="text-align: center;"><span style="font-style: italic;">Vet's
@@ -206,7 +219,10 @@ Day observed</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-14</td>
+14
+      <div style="text-align: center;"><span style="font-style: italic;"></span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 15</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
@@ -252,9 +268,14 @@ Day observed</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
 6</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
-7</td>
+7<br>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Dec 8</td>
+ valign="top">Dec 8<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 3</span><br>
+      </div>
+      </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
