--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -113,14 +113,14 @@ Algorithm Analysis<br>
 18</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 19<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-4 (from slide 17)</span><br>
-      </div>
+      <div style="text-align: center;">Lectures 4, 5 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-21</td>
+21<br>
+      <div style="text-align: center;"> Lecture 5 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 22</td>
       <td
@@ -131,7 +131,13 @@ Review: Stacks </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 25</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-26</td>
+26<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+5 (from slide 59)</span><br>
+      </div>
+      <div style="text-align: center;">Due: Analysis Tools HW<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
@@ -139,7 +145,9 @@ Review: Stacks </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 29</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">6:
+Review: Searching and Sorting Arrays<br>
+7: Review: Recursion<br>
       </td>
     </tr>
     <tr>
@@ -154,7 +162,8 @@ Review: Stacks </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 6</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">8:
+Trees<br>
       </td>
     </tr>
     <tr>
