--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -132,38 +132,46 @@ Review: Stacks </td>
 25</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 26<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-5 (from slide 59)</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture 5 (cont.) </div>
       <div style="text-align: center;">Due: Analysis Tools HW<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-28</td>
+28<br>
+      <div style="text-align: center;">Lectures 5, 6, 7 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 29</td>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">6:
 Review: Searching and Sorting Arrays<br>
-7: Review: Recursion<br>
+7: Review: Queues<br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 2</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-3</td>
+3<br>
+      <div style="text-align: center;">Lectures 7, 8 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 4</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-5</td>
+5<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+8 (from slide 23)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 6</td>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">8:
-Trees<br>
+Review: Recursion<br>
+9:
+Tree<br>
       </td>
     </tr>
     <tr>
@@ -208,7 +216,11 @@ withdrawal day</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 23</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-24</td>
+24<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 1</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 25</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
@@ -257,7 +269,11 @@ Day observed</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-14</td>
+14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 2</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 15</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
@@ -314,7 +330,11 @@ Day observed</span><br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 7</td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
- valign="top">Dec 8</td>
+ valign="top">Dec 8<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Due:
+Lab 3</span><br>
+      </div>
+      </td>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
       </td>
@@ -348,3 +368,4 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
+
