--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -111,14 +111,15 @@ Last drop day</span><br>
 25</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
 26<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P1 (from slide 51)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P1 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Sept
 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Sept
-28</td>
+28<br>
+      <div style="text-align: center;">Lectures P1, P2<br>
+      <span style="font-style: italic;"></span></div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Sept 29</td>
     </tr>
@@ -126,11 +127,17 @@ P1 (from slide 51)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 2</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-3</td>
+3<br>
+      <div style="text-align: center;">Lecture P3 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 4</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-5</td>
+5<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P3 (from slide 31)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 6</td>
     </tr>
@@ -143,7 +150,8 @@ P1 (from slide 51)</span><br>
 11</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 12<br>
-      <div style="text-align: center;">Midterm Exam<br>
+      <div style="text-align: center;">Midterm Exam (Unit O, Lecs. P1,
+P2)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
@@ -283,6 +291,7 @@ Lab 3</span><br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 12<br>
       <div style="text-align: center;">Final Exam, 12:15<br>
+(Lecs. P3-?)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
@@ -304,3 +313,4 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
+
