--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -36,11 +36,18 @@ HW</a><br>
 &nbsp;&nbsp;&nbsp; Due in-class TBD<br>
 <br>
 &nbsp;&nbsp;&nbsp; Project 1 - Palindromes<br>
-&nbsp;&nbsp;&nbsp; Due February 16<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description,
-makefile,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; PalindromeI, PalindromeR,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; test_palindrome<br>
+&nbsp;&nbsp;&nbsp; Due October 24<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project1/proj1%20palindromes.pdf" target="_top">Description</a>,
+<a href="../project1/makefile">makefile</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project1/PalindromeI.hpp">PalindromeI</a>, <a
+ href="../project1/PalindromeR.hpp">PalindromeR</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project1/test_palindrome.cpp">test_palindrome</a><br>
+<br>
+&nbsp;&nbsp;&nbsp; <a href="../heap%20hw.pdf">Heaps HW</a><br>
+&nbsp;&nbsp;&nbsp; Due in-class TBD<br>
 <br>
 &nbsp;&nbsp;&nbsp; Heaps HW<br>
 &nbsp;&nbsp;&nbsp; Due in-class TBD<br>
