--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -134,9 +134,7 @@ Last drop day</span><br>
 4</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 5<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P3 (from slide 31)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P3 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 6</td>
@@ -145,7 +143,9 @@ P3 (from slide 31)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 9</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-10</td>
+10<br>
+      <div style="text-align: center;">Lecture P3 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 11</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
@@ -167,14 +167,29 @@ withdrawal day</span><br>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 17<br>
+      <div style="text-align: center;">Lectures P3, P4<br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 1</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 18</td>
-      <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-19</td>
+      <td
+ style="vertical-align: top; background-color: rgb(102, 255, 255);"><span
+ style="color: rgb(0, 0, 0);">Oct
+19</span><br style="color: rgb(0, 0, 0);">
+      <div
+ style="text-align: center; background-color: rgb(102, 255, 255);"><span
+ style="color: rgb(0, 0, 0);">Online
+videos:</span> <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part1.mov">vid1</a>,
+      <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part3.mov">vid2</a>,
+      <a
+ href="https://www.cs.uakron.edu/%7Etoneil/teaching/cs426/week2part4.mov">vid3</a><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 20</td>
     </tr>
@@ -183,6 +198,9 @@ Lab 1</span><br>
 23</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 24<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P4 (from slide 25)</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 25</td>
@@ -313,4 +331,5 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
+
 
