--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -161,36 +161,35 @@ Review: Searching and Sorting Arrays<br>
 4</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 5<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-8 (from slide 23)</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture 8 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 6</td>
       <td
  style="vertical-align: top; background-color: rgb(51, 102, 255);">8:
 Review: Recursion<br>
-9:
-Tree<br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 9</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-10</td>
+10<br>
+      <div style="text-align: center;"> Lecture 9<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 11</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 12<br>
-      <div style="text-align: center;">Midterm Exam<br>
+      <div style="text-align: center;">Midterm Exam (Lecs. 1-8)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 13</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
-      </td>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">9:
+Trees </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
@@ -201,15 +200,23 @@ withdrawal day</span><br>
       </div>
       </td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-17</td>
+17<br>
+      <div style="text-align: center;"> Lecture 9 (cont.)<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 18</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-19</td>
+19<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lectures
+9 (from slide 59), 10</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 20</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">10:
+Heaps<br>
       </td>
     </tr>
     <tr>
@@ -344,7 +351,7 @@ Lab 3</span><br>
 11</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 12<br>
-      <div style="text-align: center;">Final Exam, 5:15<br>
+      <div style="text-align: center;">Final Exam (Lecs. 9-?), 5:15<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
@@ -368,4 +375,5 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
+
 
