--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -25,15 +25,16 @@ AND PROGRAMS <br>
 &nbsp;&nbsp;&nbsp; Programming and the Linux<br>
 &nbsp;&nbsp;&nbsp; Environment<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project0/proj0%20linux%20and%20makefiles.pdf" target="_top">Description</a>, <a
- href="../project0/makefile" target="_top">makefile</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project0/hello.C" target="_top">helloC</a>,
-<a href="../project0/hello.h" target="_top">helloH</a>, <a href="../project0/main.C" target="_top">mainC</a><br>
+ href="project0/lab0%20linux%20and%20makefiles.pdf">Description</a>, <a
+ href="project0/hello.C">helloC</a>,
+<a href="project0/hello.h">helloH</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span
+ style="text-decoration: underline;"></span><a href="project0/main.C">mainC</a><br>
 <br>
-&nbsp;&nbsp;&nbsp; <a href="../analysis%20tools%20hw.pdf" target="_top">Analysis
+&nbsp;&nbsp;&nbsp; <a href="analysis%20tools%20hw.pdf" target="_top">Analysis
 Tools
 HW</a><br>
-&nbsp;&nbsp;&nbsp; Due in-class TBD<br>
+&nbsp;&nbsp;&nbsp; Due in-class September 26<br>
 <br>
 &nbsp;&nbsp;&nbsp; Project 1 - Palindromes<br>
 &nbsp;&nbsp;&nbsp; Due October 24<br>
@@ -49,21 +50,21 @@ HW</a><br>
 &nbsp;&nbsp;&nbsp; <a href="../heap%20hw.pdf">Heaps HW</a><br>
 &nbsp;&nbsp;&nbsp; Due in-class TBD<br>
 <br>
-&nbsp;&nbsp;&nbsp; Heaps HW<br>
-&nbsp;&nbsp;&nbsp; Due in-class TBD<br>
-<br>
 &nbsp;&nbsp;&nbsp; Project 2 - Huffman code trees<br>
-&nbsp;&nbsp;&nbsp; Due TBD<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, makefile,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Heap,
-HNode, Huffman,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; test_huffman<br>
+&nbsp;&nbsp;&nbsp; Due November 14<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project2/proj2%20huffman%20codes.pdf">Description</a>, <a
+ href="../project2/makefile">makefile</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/Heap.hpp">Heap</a>,
+<a href="../project2/HNode.hpp">HNode</a>, <a href="../project2/Huffman.hpp">Huffman</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project2/test_huffman.cpp">test_huffman</a><br>
 &nbsp;&nbsp;&nbsp; Incomplete files:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HNode,
-Huffman<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/HNode.cpp">HNode</a>,
+<a href="../project2/Huffman.cpp">Huffman</a><br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"><br>
 &nbsp;&nbsp;&nbsp; Project 3 - Not Quite MapQuest<br>
-&nbsp;&nbsp;&nbsp; Due TBD<br>
+&nbsp;&nbsp;&nbsp; Due December 8<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, makefile,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Digraph, data
 file, big data file,<br>
