--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -27,10 +27,10 @@ AND PROGRAMS <br>
 	<a href="../labs/lab 1 linux shell.pdf" target="_top">Description</a>
 	, <a href="../labs/myshell.c" target="_top">seed file</a>.<br>
 <br>
-&nbsp;&nbsp; Lab 2 -<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; pthreads and Semaphores<br>
-&nbsp;&nbsp; Due TBD<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description<br>
+&nbsp;&nbsp; Lab 2 - Bumper Cars<br>
+&nbsp;&nbsp; Due November 9<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="../labs/lab 2 bumper cars.pdf" target="_top">Description</a><br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
 &nbsp;&nbsp; Due TBD<br>
