--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -25,11 +25,11 @@ AND PROGRAMS <br>
 &nbsp;&nbsp;&nbsp; Programming and the Linux<br>
 &nbsp;&nbsp;&nbsp; Environment<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="project0/lab0%20linux%20and%20makefiles.pdf">Description</a>, <a
- href="project0/hello.C">helloC</a>,
-<a href="project0/hello.h">helloH</a>,<br>
+ href="../project0/lab0%20linux%20and%20makefiles.pdf" target="_top">Description</a>, <a
+ href="../project0/hello.C" target="_top">helloC</a>,
+<a href="../project0/hello.h" target="_top">helloH</a>,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span
- style="text-decoration: underline;"></span><a href="project0/main.C">mainC</a><br>
+ style="text-decoration: underline;"></span><a href="../project0/main.C" target="_top">mainC</a><br>
 <br>
 &nbsp;&nbsp;&nbsp; <a href="analysis%20tools%20hw.pdf" target="_top">Analysis
 Tools
@@ -53,15 +53,15 @@ HW</a><br>
 &nbsp;&nbsp;&nbsp; Project 2 - Huffman code trees<br>
 &nbsp;&nbsp;&nbsp; Due November 14<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project2/proj2%20huffman%20codes.pdf">Description</a>, <a
+ href="../project2/proj2%20huffman%20codes.pdf" target="_top">Description</a>, <a
  href="../project2/makefile">makefile</a>,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/Heap.hpp">Heap</a>,
-<a href="../project2/HNode.hpp">HNode</a>, <a href="../project2/Huffman.hpp">Huffman</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/Heap.hpp" target="_top">Heap</a>,
+<a href="../project2/HNode.hpp">HNode</a>, <a href="../project2/Huffman.hpp" target="_top">Huffman</a>,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project2/test_huffman.cpp">test_huffman</a><br>
+ href="../project2/test_huffman.cpp" target="_top">test_huffman</a><br>
 &nbsp;&nbsp;&nbsp; Incomplete files:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/HNode.cpp">HNode</a>,
-<a href="../project2/Huffman.cpp">Huffman</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../project2/HNode.cpp" target="_top">HNode</a>,
+<a href="../project2/Huffman.cpp" target="_top">Huffman</a><br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"><br>
 &nbsp;&nbsp;&nbsp; Project 3 - Not Quite MapQuest<br>
 &nbsp;&nbsp;&nbsp; Due December 8<br>
