--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -25,7 +25,7 @@ AND PROGRAMS <br>
 &nbsp;&nbsp;&nbsp; Programming and the Linux<br>
 &nbsp;&nbsp;&nbsp; Environment<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
- href="../project0/lab0%20linux%20and%20makefiles.pdf" target="_top">Description</a>, <a
+ href="../project0/proj0%20linux%20and%20makefiles.pdf" target="_top">Description</a>, <a
  href="../project0/hello.C" target="_top">helloC</a>,
 <a href="../project0/hello.h" target="_top">helloH</a>,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span
