--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -208,9 +208,7 @@ withdrawal day</span><br>
 18</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 19<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lectures
-9 (from slide 59), 10</span><br>
-      </div>
+      <div style="text-align: center;">Lectures 9, 10; Review </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 20</td>
@@ -224,6 +222,9 @@ Heaps<br>
 23</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 24<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+10 (from slide 6)</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 1</span><br>
       </div>
@@ -375,5 +376,4 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
-
 
