--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -47,8 +47,8 @@ HW</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
  href="../project1/test_palindrome.cpp">test_palindrome</a><br>
 <br>
-&nbsp;&nbsp;&nbsp; <a href="../heap%20hw.pdf">Heaps HW</a><br>
-&nbsp;&nbsp;&nbsp; Due in-class TBD<br>
+&nbsp;&nbsp;&nbsp; <a href="../heap%20hw.pdf" target="_top">Heaps HW</a><br>
+&nbsp;&nbsp;&nbsp; Due in-class October 31<br>
 <br>
 &nbsp;&nbsp;&nbsp; Project 2 - Huffman code trees<br>
 &nbsp;&nbsp;&nbsp; Due November 14<br>
