--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -198,14 +198,14 @@ videos:</span> <a
 23</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 24<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P4 (from slide 25)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P4 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 25</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-26</td>
+26<br>
+      <div style="text-align: center;">Lectures P4, P5 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 27</td>
     </tr>
@@ -213,7 +213,11 @@ P4 (from slide 25)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 30</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-31</td>
+31<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+P5 (from slide 18)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 1</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
