--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -222,28 +222,34 @@ Heaps<br>
 23</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 24<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-10 (from slide 6)</span><br>
-      </div>
-      <div style="text-align: center;"><span style="font-style: italic;">Due:
-Lab 1</span><br>
+      <div style="text-align: center;"> Lecture 10 (cont.) </div>
+      <div style="text-align: center;">Due:
+Lab 1<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 25</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-26</td>
+26<br>
+      <div style="text-align: center;">Lectures 10, 11 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Oct 27</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
-      </td>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">11:
+Priority Queues </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Oct
 30</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
-31</td>
+31<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+12 (from start), Review</span><br>
+      </div>
+      <div style="text-align: center;">Due: Heaps HW<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 1</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
@@ -251,7 +257,8 @@ Lab 1</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 3</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">12:
+Balanced Trees<br>
       </td>
     </tr>
     <tr bgcolor="#ffffff">
@@ -376,4 +383,5 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
+
 
