--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -244,16 +244,17 @@ Priority Queues </td>
 30</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 31<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-12 (from start), Review</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture 12 </div>
       <div style="text-align: center;">Due: Heaps HW<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 1</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-2</td>
+2<br>
+      <div style="text-align: center;"> Lecture 12 (cont.)<br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 3</td>
       <td
@@ -265,11 +266,15 @@ Balanced Trees<br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 6</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-7</td>
+7<br>
+      <div style="text-align: center;">Review </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 8</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-9</td>
+9<br>
+      <div style="text-align: center;"> Lecture 12, Review </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 10<br>
       <div style="text-align: center;"><span style="font-style: italic;">Vet's
@@ -285,6 +290,9 @@ Day observed</span><br>
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+13 (from start)</span><br>
+      </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 2</span><br>
       </div>
@@ -296,8 +304,8 @@ Lab 2</span><br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 17 </td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
-      </td>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">13:
+Graphs </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
@@ -383,5 +391,3 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
-
-
