--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -214,14 +214,14 @@ videos:</span> <a
 30</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Oct
 31<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-P5 (from slide 18)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture P5 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 1</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-2</td>
+2<br>
+      <div style="text-align: center;">Lectures P5, D1 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 3</td>
     </tr>
@@ -229,11 +229,14 @@ P5 (from slide 18)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 6</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-7</td>
+7<br>
+      <div style="text-align: center;">Lecture D1 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 8</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 9<br>
+      <div style="text-align: center;">Lecture D1 (cont.) </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 2</span><br>
       </div>
@@ -249,8 +252,9 @@ Day observed</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-14
-      <div style="text-align: center;"><span style="font-style: italic;"></span><br>
+14<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+D1, D2, F1</span><br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
@@ -335,4 +339,3 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
-
