--- a/teaching/cs316/homePageGraphics/projects.htm
+++ b/teaching/cs316/homePageGraphics/projects.htm
@@ -65,12 +65,17 @@ HW</a><br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"><br>
 &nbsp;&nbsp;&nbsp; Project 3 - Not Quite MapQuest<br>
 &nbsp;&nbsp;&nbsp; Due December 8<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Description, makefile,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Digraph, data
-file, big data file,<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; test_dijkstra<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project3/proj3%20nqmq.pdf" target="_top">Description</a>, <a
+ href="../project3/makefile">makefile</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project3/Digraph.hpp">Digraph</a>, <a href="../project3/nqmq.dat">data
+file</a>, <a href="../project3/nqmqBig.dat">big data file</a>,<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project3/test_dijkstra.cpp">test_dijkstra</a><br>
 &nbsp;&nbsp;&nbsp; Incomplete files:<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Digraph<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a
+ href="../project3/Digraph.cpp">Digraph</a><br>
 </font></b><b><font color="#868cde" face="Verdana" size="2"></font></b>
 </body>
 </html>
