--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -290,9 +290,7 @@ Day observed</span><br>
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-13 (from start)</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture 13 </div>
       <div style="text-align: center;"><span style="font-style: italic;">Due:
 Lab 2</span><br>
       </div>
@@ -300,7 +298,9 @@ Lab 2</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 15</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-16</td>
+16<br>
+      <div style="text-align: center;"> Lecture 13 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 17 </td>
       <td
@@ -311,7 +311,11 @@ Graphs </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-21</td>
+21<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+13 (from slide 61), 14</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 22<br>
       </td>
@@ -325,7 +329,8 @@ Graphs </td>
       <center style="font-style: italic;">Thanksgiving</center>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">14:
+Hashing and Hash Tables<br>
       </td>
     </tr>
     <tr>
@@ -391,3 +396,4 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
+
