--- a/teaching/cs426/homePageGraphics/projects.htm
+++ b/teaching/cs426/homePageGraphics/projects.htm
@@ -33,8 +33,11 @@ AND PROGRAMS <br>
 	<a href="../labs/lab 2 bumper cars.pdf" target="_top">Description</a><br>
 <br>
 &nbsp;&nbsp; Lab 3 - A Simple File System<br>
-&nbsp;&nbsp; Due TBD<br>
-&nbsp;&nbsp; coming soon.<br>
+&nbsp;&nbsp; Due December 8<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/lab 3 simple file system.pdf" target="_top">Description</a>,
+	<a href="../labs/lab3/floppya.img">disk image</a>,<br>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="../labs/lab3/filesys.c">seed
+	file</a>.<br>
 </font></b><b><br>
 </b>
 </body>
