--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -253,14 +253,15 @@ Day observed</span><br>
 13</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 14<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-D1, D2, F1</span><br>
+      <div style="text-align: center;">Lectures D1, D2<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 15</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-16</td>
+16<br>
+      <div style="text-align: center;">Lectures F1, F2 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Nov 17 </td>
     </tr>
@@ -268,7 +269,11 @@ D1, D2, F1</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-21</td>
+21<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+F2 (from slide 12)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 22<br>
       </td>
@@ -339,3 +344,4 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
+
