--- a/teaching/cs316/calendar.html
+++ b/teaching/cs316/calendar.html
@@ -312,9 +312,7 @@ Graphs </td>
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 21<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-13 (from slide 61), 14</span><br>
-      </div>
+      <div style="text-align: center;"> Lecture 13 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 22<br>
@@ -329,15 +327,18 @@ Graphs </td>
       <center style="font-style: italic;">Thanksgiving</center>
       </td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);">14:
-Hashing and Hash Tables<br>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
       </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-28</td>
+28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+14 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 29</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
@@ -345,8 +346,8 @@ Hashing and Hash Tables<br>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Dec 1</td>
       <td
- style="vertical-align: top; background-color: rgb(51, 102, 255);"><br>
-      </td>
+ style="vertical-align: top; background-color: rgb(51, 102, 255);">14:
+Hashing and Hash Tables </td>
     </tr>
     <tr>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
