--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -270,9 +270,7 @@ Day observed</span><br>
 20</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 21<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-F2 (from slide 12)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture F2 (cont.) </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 22<br>
@@ -291,7 +289,11 @@ F2 (from slide 12)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-28</td>
+28<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+M1 (from start)</span><br>
+      </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 29</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
