--- a/teaching/cs426/calendar.html
+++ b/teaching/cs426/calendar.html
@@ -290,14 +290,14 @@ Day observed</span><br>
 27</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
 28<br>
-      <div style="text-align: center;"><span style="font-style: italic;">Lecture
-M1 (from start)</span><br>
-      </div>
+      <div style="text-align: center;">Lecture M1 </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Nov
 29</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Nov
-30</td>
+30<br>
+      <div style="text-align: center;">Lecture M2 </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Dec 1</td>
     </tr>
@@ -305,11 +305,16 @@ M1 (from start)</span><br>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
 4</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
-5</td>
+5<br>
+      <div style="text-align: center;">Lecture M2 (cont.) </div>
+      </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
 6</td>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 7<br>
+      <div style="text-align: center;"><span style="font-style: italic;">Lecture
+M2 (from slide 60), X5</span><br>
+      </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" bgcolor="#c0c0c0"
  valign="top">Dec 8<br>
@@ -324,7 +329,7 @@ Lab 3</span><br>
       <td style="background-color: rgb(51, 102, 255);" valign="top">Dec
 12<br>
       <div style="text-align: center;">Final Exam, 12:15<br>
-(Lecs. P3-?)<br>
+(Lecs. P3, P4, P5; Units D, F, M)<br>
       </div>
       </td>
       <td style="background-color: rgb(0, 0, 0);" valign="top">Dec
@@ -346,4 +351,3 @@ document.write("<br>Only " + diffDays + " days left until end of fall term (12/1
 </script></span>
 </body>
 </html>
-
